# CON

_sim/: qsort-input_06.c.stdout  qsort-input_09.isa.stdout
task-0/: Makefile  README.md  implementation.json  lfsr.sv  scientific_practice.txt  synth.ys  testbench.sv
task-0/fpga/: Makefile  icebreaker.pcf  lfsr_fpga.sv
task-1/: Makefile  README.md  implementation.json  synth.ys
task-1/_sim/: output.txt  sqrt.vcd  sqrt.vvp
task-1/src/: sqrt.sv
task-1/tb/: testbench.sv
task-1/test/: square.testvec
task-2/: Makefile  README.md  implementation.json
task-2/_sim/: gcd.vcd  gcd.vvp  output_gcd.txt
task-2/_synth/: gcd.stats  gcd.v  gcd_synth.dot  gcd_synthesized.v
task-2/src/: gcd.sv
task-2/tb/: testbench.sv
task-3/: Makefile  README.md
task-3/ips/: micro_riscv.sv
task-4/: Makefile  README.md  qsort.asm  qsort_transformed.c
task-4/_sim/: qsort-input_08.isa.stdout  qsort-input_11.c.stdout  qsort-input_13.isa.stdout  qsort-input_16.c.stdout  qsort-input_18.c.stdout  qsort.elf  qsort.hex  qsort_transformed-input_07.c.stdout  qsort_transformed-input_10.c.stdout  qsort_transformed-input_12.c.stdout  qsort_transformed-input_17.c.stdout  qsort_transformed.elf
task-4/asmlib/asmlib-2.2.0.dist-info/: RECORD
task-4/test/: input_06.testvec  input_07.testvec  input_08.testvec  input_09.testvec  input_10.testvec  input_11.testvec  input_12.testvec  input_13.testvec  input_14.testvec  input_14.testvec.out  input_15.testvec  input_15.testvec.out  input_16.testvec  input_17.testvec  input_18.testvec  input_19.testvec  input_19.testvec.out  input_20.testvec  input_20.testvec.out
task-5/: CMakeLists.txt  README.md
task-5/_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  pinger
task-5/_build/Testing/Temporary/: CTestCostData.txt
task-5/_build/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
task-5/_build/tests/: CTestTestfile.cmake  Makefile  arp.req+3xicmp_echo.out.cap  arp.req.csv  arp.req.out.cap  cmake_install.cmake
task-5/cmake/: FindPCAP.cmake  clangformat.cmake  testCoverage.cmake
task-5/cmake/scripts/: run.cmake  test-reply.cmake
task-5/src/: CMakeLists.txt
task-5/src/icmp/: icmp.cpp
task-5/src/layer_internet/: arp.cpp  ipv4.cpp
task-5/src/layer_link/: ethernet.cpp
task-5/tests/: CMakeLists.txt  arp.req+3xicmp_echo.pcapng  arp.req+3xicmp_echo.reply.csv  arp.req.noreply.csv  arp.req.pcapng  icmp_echo.csv  icmp_echo.pcapng
